--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -124,6 +124,7 @@ ul,li { margin:0; padding:0; }
     display: flex;
     flex-wrap: wrap;
     &.gap{gap: 1rem;}
+    &.halfgap{gap: .5rem;}
     &.center{justify-content: center;}
     &.even{justify-content: space-evenly;}
     &.flex-between{justify-content:space-between;}
